--- a/app/src/main/res/layout/fragment_card_selector.xml
+++ b/app/src/main/res/layout/fragment_card_selector.xml
@@ -5,10 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".CardSelector">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Container for BirthdayCardFragment -->
+    <FrameLayout
+        android:id="@+id/card_selector_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
+
+    <!-- Volver (Back) button -->
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Volver"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:onClick="onVolverButtonClick" />
 
 </FrameLayout>
