--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,10 +22,47 @@
         <action
             android:id="@+id/action_cardSelector_to_cardGenerator"
             app:destination="@id/cardGenerator" />
+        <action
+            android:id="@+id/action_cardSelector_to_home2"
+            app:destination="@id/home2" />
     </fragment>
     <fragment
         android:id="@+id/cardGenerator"
         android:name="com.uvg.gt.cardgenerator.CardGenerator"
         android:label="fragment_card_generator"
         tools:layout="@layout/fragment_card_generator" />
+    <fragment
+        android:id="@+id/birthdayCard"
+        android:name="com.uvg.gt.cardgenerator.BirthdayCard"
+        android:label="fragment_birthday_card"
+        tools:layout="@layout/fragment_birthday_card" >
+        <action
+            android:id="@+id/action_birthdayCard_to_birthday1"
+            app:destination="@id/birthday1" />
+    </fragment>
+    <fragment
+        android:id="@+id/loveCard"
+        android:name="com.uvg.gt.cardgenerator.LoveCard"
+        android:label="fragment_love_card"
+        tools:layout="@layout/fragment_love_card" />
+    <fragment
+        android:id="@+id/halloweenCard"
+        android:name="com.uvg.gt.cardgenerator.HalloweenCard"
+        android:label="fragment_halloween_card"
+        tools:layout="@layout/fragment_halloween_card" />
+    <fragment
+        android:id="@+id/newYearCard"
+        android:name="com.uvg.gt.cardgenerator.NewYearCard"
+        android:label="fragment_new_year_card"
+        tools:layout="@layout/fragment_new_year_card" />
+    <fragment
+        android:id="@+id/christmasCard"
+        android:name="com.uvg.gt.cardgenerator.ChristmasCard"
+        android:label="fragment_christmas_card"
+        tools:layout="@layout/fragment_christmas_card" />
+    <fragment
+        android:id="@+id/birthday1"
+        android:name="com.uvg.gt.cardgenerator.birthday1"
+        android:label="fragment_birthday1"
+        tools:layout="@layout/fragment_birthday1" />
 </navigation>
