--- a/app/src/main/res/layout/fragment_love_card.xml
+++ b/app/src/main/res/layout/fragment_love_card.xml
@@ -16,7 +16,7 @@
             android:id="@+id/love_image_button"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:src="@drawable/love1"
+            android:src="@drawable/love1_2"
             android:scaleType="fitCenter"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -27,7 +27,7 @@
             android:id="@+id/love2_image_button"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:src="@drawable/love2"
+            android:src="@drawable/love2_2"
             android:scaleType="fitCenter"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -49,7 +49,7 @@
             android:id="@+id/love4_image_button"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:src="@drawable/love4"
+            android:src="@drawable/love4_2"
             android:scaleType="fitCenter"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
