--- a/app/src/main/res/layout/fragment_new_year_card.xml
+++ b/app/src/main/res/layout/fragment_new_year_card.xml
@@ -56,7 +56,15 @@
             android:paddingTop="8dp"
             android:paddingBottom="0dp"/>
 
-
+        <!-- Volver (Back) button -->
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Volver"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:onClick="onVolverButtonClick" />
 
 
     </LinearLayout>
