--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,21 @@
         <action
             android:id="@+id/action_home2_to_cardSelector"
             app:destination="@id/cardSelector" />
+        <action
+            android:id="@+id/action_home2_to_birthdayCard"
+            app:destination="@id/birthdayCard" />
+        <action
+            android:id="@+id/action_home2_to_loveCard"
+            app:destination="@id/loveCard" />
+        <action
+            android:id="@+id/action_home2_to_halloweenCard"
+            app:destination="@id/halloweenCard" />
+        <action
+            android:id="@+id/action_home2_to_newYearCard"
+            app:destination="@id/newYearCard" />
+        <action
+            android:id="@+id/action_home2_to_christmasCard"
+            app:destination="@id/christmasCard" />
     </fragment>
     <fragment
         android:id="@+id/cardSelector"
@@ -38,28 +53,47 @@
         tools:layout="@layout/fragment_birthday_card" >
         <action
             android:id="@+id/action_birthdayCard_to_birthday1"
-           fragments andriod studio app:destination="@id/birthday1" />
+            app:destination="@id/birthday1" />
+        <action
+            android:id="@+id/action_birthdayCard_to_home2"
+            app:destination="@id/home2" />
     </fragment>
     <fragment
         android:id="@+id/loveCard"
         android:name="com.uvg.gt.cardgenerator.LoveCard"
         android:label="fragment_love_card"
-        tools:layout="@layout/fragment_love_card" />
+        tools:layout="@layout/fragment_love_card" >
+        <action
+            android:id="@+id/action_loveCard_to_home2"
+            app:destination="@id/home2" />
+    </fragment>
     <fragment
         android:id="@+id/halloweenCard"
         android:name="com.uvg.gt.cardgenerator.HalloweenCard"
         android:label="fragment_halloween_card"
-        tools:layout="@layout/fragment_halloween_card" />
+        tools:layout="@layout/fragment_halloween_card" >
+        <action
+            android:id="@+id/action_halloweenCard_to_home2"
+            app:destination="@id/home2" />
+    </fragment>
     <fragment
         android:id="@+id/newYearCard"
         android:name="com.uvg.gt.cardgenerator.NewYearCard"
         android:label="fragment_new_year_card"
-        tools:layout="@layout/fragment_new_year_card" />
+        tools:layout="@layout/fragment_new_year_card" >
+        <action
+            android:id="@+id/action_newYearCard_to_home2"
+            app:destination="@id/home2" />
+    </fragment>
     <fragment
         android:id="@+id/christmasCard"
         android:name="com.uvg.gt.cardgenerator.ChristmasCard"
         android:label="fragment_christmas_card"
-        tools:layout="@layout/fragment_christmas_card" />
+        tools:layout="@layout/fragment_christmas_card" >
+        <action
+            android:id="@+id/action_christmasCard_to_home2"
+            app:destination="@id/home2" />
+    </fragment>
     <fragment
         android:id="@+id/birthday1"
         android:name="com.uvg.gt.cardgenerator.birthday1"
